--- a/wordpress/wp-content/themes/simple/style.css
+++ b/wordpress/wp-content/themes/simple/style.css
@@ -2584,69 +2584,6 @@ pre{padding: 20px;}
 .page-overlay {
 	background: none !important;
 }
-.red-center {
-	margin-top: 50px;
-	margin-bottom: 220px;
-}
-.kid-image {
-	width: 874px;
-	margin: auto;
-}
-.kid-green {
-	margin-top: -200px;
-}
-#white-page {
-	padding: 100px;
-	width: 876px;
-	margin: auto;
-	background: white;
-}
-#title {
-	width: 211px;
-	margin: auto;
-	padding: 50px;
-	border: 2px solid white;
-	margin-bottom: 50px;
-}
-.left-p {
-	float: right;
-	width: 410px;
-}
-.right-p {
-	width: 410px;
-}
-.text-header {
-	margin-bottom: 20px;
-}
-#square-white {
-	padding: 30px;
-	width: 500px;
-	margin: auto;
-	background-color: white;
-	box-sizing: border-box;
-}
-#square-white p {
-	font-weight: bold;
-	color: black;
-	margin-bottom: 5px;
-}
-#square-blue {
-	box-sizing: border-box;
-	padding: 5px;
-    width: 500px;
-    height: 35px;
-    margin: auto;
-    background-color: rgb(64, 64, 152);
-}
-.f-right {
-	color: white;
-	float: right;
-}
-.lorem-title {
-	margin-left: 60px;
-	position: absolute;
-	margin-top: -40px;
-	font-size: 20px;
-	font-weight: bold;
-	color: black;
+.scroll-link img {
+    margin-top: 200px;
 }
